# Algo-graph-searching

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
Utility/: GraphReader.cpp  GraphReader.h  Vertex.h
graphgenerator/: GraphGenerator.cpp  GraphGenerator.h
graphsearchsolutions/: GraphSearcher_interface.h  GraphSearcher_optimal.cpp  GraphSearcher_optimal.h  GraphSearcher_trivial.cpp  GraphSearcher_trivial.h
